Working to add functionality to switch

--- a/popup/display_switch.html
+++ b/popup/display_switch.html
@@ -10,9 +10,9 @@
   <!-- Rounded switch -->
   <label class="switch">
     <input type="checkbox">
-    <span class="slider round"></span>
+    <span class="slider round" id="PortAuthoritySlidingSwitch"></span>
   </label>
-  <script type="module" src="display_switch.js"></script>
+  <script src="display_switch.js"></script>
 </body>
 
 </html>
