Fixed functionality of switch

--- a/popup/display_switch.html
+++ b/popup/display_switch.html
@@ -12,7 +12,7 @@
     <input type="checkbox">
     <span class="slider round" id="PortAuthoritySlidingSwitch"></span>
   </label>
-  <script src="display_switch.js"></script>
+  <script type="module" src="display_switch.js"></script>
 </body>
 
 </html>
