--- a/popup/display_switch.html
+++ b/popup/display_switch.html
@@ -8,8 +8,8 @@
 
 <body>
   <!-- Rounded switch -->
-  <label class="switch">
-    <input type="checkbox">
+  <label class="switch" id="onOffSwitch">
+    <input type="checkbox" id="PortAuthorityCheckbox">
     <span class="slider round" id="PortAuthoritySlidingSwitch"></span>
   </label>
   <script type="module" src="display_switch.js"></script>
