Improved GUI switch but still not fully functional; updated regex

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -33,7 +33,7 @@
             <div class="row" id="config_section">
                 <div class="col-sm-1">
                     <label class="switch">
-                        <input type="checkbox" id="globalStatus">
+                        <input type="checkbox" id="globalStatusPortAuthority">
                         <span class="slider round"></span>
                         <label id="configs_switch_filter">Blocking</label>
                     </label>
@@ -47,6 +47,7 @@
         </div>
         <br />
     </div>
+    <script type="module" src="switch.js"></script>
 </body>
 </html>
 
