--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="loading">
 <head>
     <title>Port Authority</title>
     <!-- Required meta tags -->
