Fixed alert message and removed blocked hosts text from bottom of popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,7 +21,7 @@
                             <span class="float-left"><img src="../icons/logo-32.png"
                                 width="32" height="32" alt=""></span>
                                 <span style="color: #FFFFFF;" class="float-right brand">
-                                     Port Authority
+                                    Port Authority
                                 </span><br />
                                 <span class="badge badge-warning float-left small-version"
                                 id="version"></span>
@@ -35,13 +35,8 @@
                     <label class="switch">
                         <input type="checkbox" id="globalStatusPortAuthority">
                         <span class="slider round"></span>
-                        <label id="configs_switch_filter">Blocking</label>
+                        <label id="configs_switch_filter" class=bold>Blocking</label>
                     </label>
-                </div>
-            </div>
-            <div class="row" id="blocking_section">
-                <div class="col-sm-1">
-   			<h5><b id="blocked_hosts">Blocked Hosts</b></h5>
                 </div>
             </div>
         </div>
