added the gui option to disable notifications and fixed regex to put brackets around ipv6 addresses

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -39,10 +39,22 @@
                     </label>
                 </div>
             </div>
+            
+            <div class="row" id="config_section">
+                <div class="col-sm-1">
+                    <label class="switch">
+                        <input type="checkbox" id="notificationStatusPortAuthority">
+                        <span class="slider round"></span>
+                        <label id="configs_switch_filter" class=bold>Notifications</label>
+                    </label>
+                </div>
+            </div>
+            
         </div>
         <br />
     </div>
     <script type="module" src="switch.js"></script>
+    <script type="module" src="notifications.js"></script>
 </body>
 </html>
 
