Block ports and hosts are now collected and stored in extension storage. Blocked data is displayed in the UI

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="loading">
+
 <head>
     <title>Port Authority</title>
     <!-- Required meta tags -->
@@ -11,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="switchButtons.css">
     <link rel="stylesheet" type="text/css" href="core.css">
 </head>
+
 <body>
         <div class="container-fluid"
         style="min-width: 200px;">
@@ -50,11 +52,13 @@
                 </div>
             </div>
             
+        <div class="row" id="blocked_data_display">
         </div>
         <br />
     </div>
     <script type="module" src="switch.js"></script>
     <script type="module" src="notifications.js"></script>
+    <script type="module" src="PopupUI.js"></script>
 </body>
 </html>
 
