Added a header elements to label controls

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -33,6 +33,9 @@
             </div>
 
             <div class="row" id="config_section">
+                <div class="col-12">
+                    <h5>Controls</h5>
+                </div>
                 <div class="col-sm-1">
                     <label class="switch">
                         <input type="checkbox" id="globalStatusPortAuthority">
