Blocked ports and hosts now only show for their relevant tab

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,7 +17,7 @@
         <div class="container-fluid"
         style="min-width: 200px;">
         <div class="row">
-            <nav class="col-sm-1 navbar-margin navbar banner-color">
+            <nav class="col-12 navbar-margin navbar banner-color">
                 <div class="container">
                         <span class="navbar-brand">
                             <span class="float-left"><img src="../icons/logo-32.png"
