cleaned up UI and fixed bugs

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,24 +17,20 @@
         <div class="container-fluid"
         style="min-width: 200px;">
         <div class="row">
-            <nav class="col-12 navbar-margin navbar banner-color">
-                <div class="container">
-                        <span class="navbar-brand">
-                            <span class="float-left"><img src="../icons/logo-32.png"
-                                width="32" height="32" alt=""></span>
-                                <span style="color: #FFFFFF;" class="float-right brand">
-                                    Port Authority
-                                </span><br />
-                                <span class="badge badge-warning float-left small-version"
-                                id="version"></span>
-                        </span>
-                        </div>
-                </nav>
+	<nav class="col-12 navbar-margin navbar banner-color d-flex align-items-center justify-content-center">
+                <div class="navbar-brand d-flex">
+                    <img src="../icons/logo-32.png" width="32" height="32" alt="">
+                    <span style="color: #FFFFFF;" class="brand ml-2 font-weight-bold">
+                        Port Authority
+                    </span>
+
+                </div>
+            </nav>
             </div>
 
             <div class="row" id="config_section">
-                <div class="col-12">
-                    <h5>Controls</h5>
+                <div class="col-12 ">
+                    <h5>Options</h5>
                 </div>
                 <div class="col-sm-1">
                     <label class="switch">
