Updated UI; Bolded headers; changed color of View Ports; Removed halo around View Ports; Started trying to remove extension storage on refresh

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,13 +28,13 @@
 
         <div class="row" id="config_section">
             <div class="col-12">
-                <h5>Options</h5>
+                <h5 class="bold-text">Options</h5>
             </div>
             <div class="col-sm-1">
                 <label class="switch">
                     <input type="checkbox" id="globalStatusPortAuthority">
                     <span class="slider round"></span>
-                    <label id="configs_switch_filter" class=bold>Blocking</label>
+                    <label id="configs_switch_filter" class="bold" style="font-size: 16px;">Blocking</label>
                 </label>
             </div>
         </div>
@@ -44,7 +44,7 @@
                 <label class="switch">
                     <input type="checkbox" id="notificationStatusPortAuthority">
                     <span class="slider round"></span>
-                    <label id="configs_switch_filter" class=bold>Notifications</label>
+                    <label id="configs_switch_filter" class="bold" style="font-size: 16px;">Notifications</label>
                 </label>
             </div>
         </div>
