spelling fixes and comments

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,7 +19,7 @@
             <nav class="col-12 navbar-margin navbar banner-color d-flex align-items-center justify-content-center">
                 <div class="navbar-brand d-flex">
                     <img src="../icons/logo-32.png" width="32" height="32" alt="">
-                    <span style="color: #FFFFFF;" class="brand ml-2 font-weight-bold">
+                    <span style="color: #FFFFFF;" class="brand ml-2 bold">
                         Port Authority
                     </span>
                 </div>
