Added whitelist option

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,7 +28,9 @@
 
         <div class="row" id="config_section">
             <div class="col-12">
-                <h5 class="bold-text">Options</h5>
+                <h5 class="bold-text">Options
+                <img src="../icons/settings.png" style="float: right;" width="24" height="24" alt="" id="settings">
+                </h5>
             </div>
             <div class="col-sm-1">
                 <label class="switch">
