--- a/popup/settings.html
+++ b/popup/settings.html
@@ -16,8 +16,8 @@
     </form>
     <br />
     <p><strong>Domains Allowed to Bypass PortAuthority Blocking:</strong></p>
-    <div class="row" id="allowedDomainsListID">
-    </div>
+    <ul id="allowedDomainsListID">
+    </ul>
     <br />
     <script type="module" src="settings.js"></script>
 </body>
