--- a/popup/popup.html
+++ b/popup/popup.html
@@ -56,6 +56,7 @@
         <br />
     </div>
     <script src="scripts/bootstrap.bundle.min.js"></script>
+    <script src="../BrowserStorageManager.js"></script>
     <script type="module" src="switch.js"></script>
     <script type="module" src="PopupUI.js"></script>
 </body>
