--- a/popup/settings.html
+++ b/popup/settings.html
@@ -20,7 +20,8 @@
     <ul id="allowedDomainsListID">
     </ul>
     <br />
-    <script type="module" src="settings.js"></script>
+    <script src="../BrowserStorageManager.js"></script>
+    <script src="settings.js"></script>
 </body>
 
 </html>
