Consolidated storage access functionality in settings.js Also why is the settings page's script being loaded as a content script on every single webpage visited? Removed that as no intended functionality could be ascertained

--- a/popup/settings.html
+++ b/popup/settings.html
@@ -2,9 +2,9 @@
 <html lang="en" class="loading">
 
 <head>
-    <title>Port Authority</title>
-    <!-- Required meta tags -->
+    <!-- Required meta tag -->
     <meta charset="utf-8">
+    <title>Port Authority</title>
 </head>
 
 <body>
@@ -18,8 +18,6 @@
     <p><strong>Domains Allowed to Bypass PortAuthority Blocking:</strong></p>
     <ul id="allowedDomainsListID">
     </ul>
-    <br />
     <script type="module" src="settings.js"></script>
 </body>
-
 </html>
