Refactored settings page js to use atomic modifications and better encapsulated form action handling

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -11,7 +11,7 @@
     <p style="color: red;"><strong>Make sure you enter a proper domain name (ebay.com)</strong></p>
     <form>
         <label>Add new domain:</label>
-        <input type="text" id="add_domain" >
+        <input type="text" required id="add_domain" />
         <button type="submit">Save</button>
     </form>
     <br />
