--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -1,10 +1,5 @@
----
-title: "Port Scan"
-layout: default
-permalink: "/PortScan"
----
+<html>
 <head>
-    <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
 </head>
 
 <div style="border: solid black 5px; border-radius: 10px; background-color: #da5a5a; padding-left: 20px; padding-right: 20px;
@@ -25,7 +20,7 @@ padding-bottom: 20px; width: 500px; margin: auto; text-align: center;padding-top
                 <br>   
                 <div>
                     <a href="https://addons.mozilla.org/en-US/firefox/addon/port-authority/">
-                        <img src="{{ site.baseurl }}/assets/images/firefoxaddon.svg" alt="for Firefox" height="60px" />
+                        <img src="https://blog.mozilla.org/addons/files/2020/04/get-the-addon-fx-apr-2020.svg" alt="for Firefox" height="60px" />
                     </a>
                 </div> 
                 <br>
@@ -196,4 +191,4 @@ padding-bottom: 20px; width: 500px; margin: auto; text-align: center;padding-top
     }
 
 </script>
-
+</html>
