Extracted out common text color CSS

--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -16,6 +16,7 @@
             margin: auto;
             text-align: center;
             padding-top: 10px;
+            color: white;
         }
 
         #custom_button {
@@ -29,12 +30,12 @@
     <div id="main_content">
 
         <p>
-            <strong style="color: white; font-size: 30px;">All in One Port-Scan Test</strong>
+            <strong style="font-size: 30px;">All in One Port-Scan Test</strong>
         </p>
 
         <input type="button"id="custom_button" value="Port Scan My Internal Network!" onclick="custom_scan();" />
         
-        <div style="color: white;">
+        <div>
             <br>
             <p>
                 <strong>
@@ -51,13 +52,13 @@
                 </strong>        
             </p>
         </div>
-            <p style="color: white;font-weight: bold;visibility: hidden;font-size: 26px;" id="requestsmade">
+            <p style="font-weight: bold;visibility: hidden;font-size: 26px;" id="requestsmade">
                 <strong>
                     Requests Made
                 </strong>
             </p>
         <div>
-            <div id="results" style="padding-top: 10px; color: white;font-weight: bold;"></div>
+            <div id="results" style="padding-top: 10px; font-weight: bold;"></div>
         </div>
 
     </div>
