--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -6,24 +6,25 @@
     <title>All in One Port-Scan Test</title>
     <style>
         main {
-            border: solid black 5px;
-            border-radius: 10px;
-            background-color: #da5a5a;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-bottom: 20px;
             width: 500px;
             margin: auto;
-            text-align: center;
+            padding: 20px;
             padding-top: 10px;
+
+            border: solid black 5px;
+            border-radius: 10px;
+
+            background-color: #da5a5a;
+
             color: white;
             font-weight: bold;
+            text-align: center;
         }
 
         #custom_button {
-            font-size: 18px;
             padding: 6px;
             background-color: #e7e7e7;
+            font-size: 18px;
         }
     </style>
 </head>
@@ -49,7 +50,7 @@
         <div id="results" style="padding-top: 10px; font-weight: bold;"></div>
     </main>
 
-    <div id="testdiv" style="visibility: hidden"></div>
+    <div id="testdiv" hidden></div>
 
     <script>
 
