--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -67,8 +67,7 @@
             if (isNaN(port) || port <= 0 || port > 65535) {
                 alert("Bad port number");
             }
-            this.ip = ip;
-            this.port = port;
+            const host = ip + ":" + port;
             this.total_time = null;
 
             this.runHTTP = function () {
@@ -80,9 +79,9 @@
 
                 /* Create the div to load the image, passing our object's index into
                     the global directory so that it can be retrieved. */
-                test_div.innerHTML = '<img src="http://' + ip + ':' + port + 
+                test_div.innerHTML = '<img src="http://' + host + 
                     '" alt="" onerror="error_handler(' + our_scanobj_index + ');" />';
-                res_div.innerHTML += "http://" + ip + ":" + port + "<br />";
+                res_div.innerHTML += "http://" + host + "<br />";
 
                 // XXX: What's the right way to do this in JS?
                 var thiss = this;
@@ -106,10 +105,10 @@
 
                 /* Create the div to load the image, passing our object's index into
                     the global directory so that it can be retrieved. */
-                test_div.innerHTML = '<img src="https://' + ip + ':' + port + 
+                test_div.innerHTML = '<img src="https://' + host + 
                     '" alt="" onerror="error_handler(' + our_scanobj_index + ');" />';
 
-                res_div.innerHTML += "https://" + ip + ":" + port + "<br />";
+                res_div.innerHTML += "https://" + host + "<br />";
 
                 // XXX: What's the right way to do this in JS?
                 var thiss = this;
@@ -126,8 +125,8 @@
 
             this.ws = function() {
             return new Promise((resolve, reject) => {
-                var ws = new WebSocket("ws://" + ip +":" + port + '/')
-                res_div.innerHTML += "ws://" + ip + ":" + port + "<br />";
+                var ws = new WebSocket("ws://" + host + '/')
+                res_div.innerHTML += "ws://" + host + "<br />";
                 ws.onerror = function() {
                 // close the socket before we return
                 ws.close()
@@ -137,8 +136,8 @@
 
             this.wss = function() {
             return new Promise((resolve, reject) => {
-                var ws = new WebSocket("wss://" + ip +":" + port + '/')
-                res_div.innerHTML += "wss://" + ip + ":" + port + "<br />";
+                var ws = new WebSocket("wss://" + host + '/')
+                res_div.innerHTML += "wss://" + host + "<br />";
                 ws.onerror = function() {
                 // close the socket before we return
                 ws.close()
