--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -68,6 +68,7 @@
                 alert("Bad port number");
             }
             const host = ip + ":" + port;
+            this.host = host;
             this.total_time = null;
 
             this.runHTTP = function () {
@@ -164,7 +165,7 @@
         function custom_scan()
         {
             const ips = [{"127.0.0.1": 80}, {"127.0.0.1": 65535}, {"0.0.0.0": 80}, {"localhost": 8080}, {"localhost": 8081}, {"localhost": 8082}, {"localhost": 8083}, {"localhost": 8084}, {"localhost": 8085}, {"LoCALhOst": 443}, {"10.0.0.1": 455}, {"10.255.22.33": 80}, {"192.168.1.1": 443}, {"192.168.1.255":6463}, {"172.17.100.155": 4444}, {"172.31.255.255": 8081}, {"172.031.33.33": 445}, {"169.254.1.0": 547}, {"169.254.1.0": 21}, {"169.254.1.0": 194}];
-            const scripts = [{"fp.disney.go.com": 443}, {"h.chase.co.uk": 443}, {"analytics.vacations.united.com": 443}, {"tmx.bestbuy.com": 443}, {"thm12.visa.com": 443}, {"tmetrix.my.chick-fil-a.com": 443}, {"cfa.fidelity.com": 443}, {"content22.citibank.com": 443}, {"deviceauth.dmv.ca.gov": 443}, {"dfp.t-mobile.at": 443}, {"src.ebay-us.com": 443}, {"fp.disney.go.com": 443}, {"fp.ups.com": 443}];
+            const scripts = ["fp.disney.go.com", "h.chase.co.uk", "analytics.vacations.united.com", "tmx.bestbuy.com", "thm12.visa.com", "tmetrix.my.chick-fil-a.com", "cfa.fidelity.com", "content22.citibank.com", "deviceauth.dmv.ca.gov", "dfp.t-mobile.at", "src.ebay-us.com", "fp.disney.go.com", "fp.ups.com"];
 
             trigger_portscan_button.disabled = true;
             document.getElementById("requestsmade").hidden = false;
@@ -181,12 +182,11 @@
                 scanner.wss();
             }
 
-            for(const item of scripts){
-                const [host, port] = Object.entries(item)[0];
-                const scanner = new PortScanner(host, port);
-
+            for(const host of scripts){
+                const scanner = new PortScanner(host, 443);
                 scanner.runHTTPS();
             }
+            
             trigger_portscan_button.disabled = false;
         }
     </script>
