--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -3,59 +3,155 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
     <title>All in One Port-Scan Test</title>
     <style>
-        main {
-            width: 500px;
-            margin: auto;
-            padding: 20px;
-            padding-top: 10px;
+        /* Color variables copied from Port Authority */
+        :root {
+            --light: #ffffff;
+            --dark: #23222B;
+            --background: var(--light);
+            --foreground: var(--dark);
+            --red: #800000;
+        }
+        @media (prefers-color-scheme: dark) {
+            :root {
+                /* Colors selected to match the settings page's wrapper container styles */
+                --light: #BFBFC9;
+                --dark: #23222B;
+                --background: var(--dark);
+                --foreground: var(--light);
+                --red: #B20000; /* Slightly brighter for better contrast against `--background` */
+            }
+        }
+        body {
+            background-color: color-mix(in oklab, var(--background) 95%, var(--foreground));
+            color: var(--foreground);
 
-            border: solid black 5px;
-            border-radius: 10px;
+            font-family: system-ui, sans-serif;
+            line-height: 1.5;
 
-            background-color: #da5a5a;
+            box-sizing: border-box;
+            margin: 0;
+            min-height: 100vh;
+            padding: 2vw 2vw;
 
-            color: white;
-            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        section {
+            max-width: 80ch;
+
+            background-color: var(--background);
+            border: 2px solid color-mix(in oklab, var(--background) 90%, var(--foreground));
+
+            border-radius: 15px;
+            overflow: hidden;
+        }
+        header {
+            background-color: var(--red);
+            color: var(--background);
+
+            padding: 2em 2ch;
             text-align: center;
+
+            h1 {
+                font-size: 2rem;
+                margin: 0;
+            }
+        }
+        main {
+            padding: 2ch;
+            padding-top: 0;
+            overflow: auto;
         }
 
         #custom_button {
-            padding: 6px;
-            background-color: #e7e7e7;
-            font-size: 18px;
+            display: block;
+            margin: 2em auto;
+            padding: 0.5em 2ch;
+            font-size: 1.1em;
+
+            border: none;
+            outline: 5px solid var(--red);
+            border-radius: 50rem;
+
+            background-color: color-mix(in oklab, var(--background) 95%, var(--foreground));
+            color: var(--red);
+
+            cursor: pointer;
+
+            transition: outline .2s,
+                        color .4s;
+        }
+        #custom_button[disabled] {
+            cursor: wait;
+        }
+        #custom_button:not([disabled]):is(:hover, :active, :focus) {
+            outline: 8px solid oklch(from var(--red) calc(l + 0.1) c h);
+            color: var(--foreground);
+        }
+        #plugin-button {
+            display: block;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        code, pre {
+            font-family: ui-monospace, monospace;
+            background-color: color-mix(in oklab, var(--background) 92%, var(--foreground));
+            border: 1px solid color-mix(in oklab, var(--background) 85%, var(--foreground));
+            border-radius: 5px;
+            padding: 0 0.5ch;
+        }
+        pre {
+            padding: 0.6em 2ch;
+            margin: 0;
+        }
+        a {
+            color: oklch(from var(--red) calc(l + 0.2) c h);
+            text-decoration: underline oklch(from var(--red) calc(l + 0.2) c h) 2px;
+        }
+        a:is(:hover, :focus) {
+            color: var(--red);
+            text-decoration-color: var(--red);
         }
     </style>
 </head>
 <body>
-    <main>
-        <h1>All in One Port-Scan Test</h1>
+    <section>
+        <header><h1>All-in-One Port Scan Test</h1></header>
+        <main>
+            <button id="custom_button" onclick="custom_scan();">Port Scan My Internal Network!</button>
+            <p>
+                The button above will run a port-scan of your local network. It works by triggering HTTP <code>GET</code> requests via
+                a hidden image's <code>src</code> attribute. The port-scan results will <em>never</em> be uploaded to remote servers and will
+                never leave your computer. You can verify this and fully monitor the scan from the <a href="https://firefox-source-docs.mozilla.org/devtools-user/network_monitor/index.html" target="_blank">DevTools Network tab</a>,
+                or check on the list of the local domains scanned below.
+            </p>
+            <p>
+                To protect against private network port-scans like these there are several options:
+                the <a href="https://addons.mozilla.org/firefox/addon/port-authority/">Port Authority browser addon</a> is designed specifically to block private network port-scans.
+                Alternatively, <a href="https://addons.mozilla.org/firefox/addon/ublock-origin/" target="_blank">uBlock Origin</a> users
+                can add the <a href="https://github.com/gorhill/uBlock/wiki/Dashboard:-Filter-lists#block-outsider-intrusion-into-lan" target="_blank">"Block Outsider Intrusion into LAN"</a> filter list.
+            </p>
+            <a id="plugin-button" href="https://addons.mozilla.org/firefox/addon/port-authority/">
+                <img src="https://blog.mozilla.org/addons/files/2020/04/get-the-addon-fx-apr-2020.svg" alt="Port Authority addon for Firefox" height="60px">
+            </a>
+            <h2 id="results-label" hidden>
+                Requests Made:
+            </h2>
+            <pre id="results" hidden></pre>
+        </main>
 
-        <button id="custom_button" onclick="custom_scan();">Port Scan My Internal Network!</button>
-        
-        <p>
-            By clicking the button above, you understand that this is a portscanning test that happens inside your browser and is specifically built to test all the possible ways a site can port scan you in one easy location. 
-            It will also try to reach out to specific domains that are known for distributing privacy-invasive scripts but will not attempt to download these scripts. NO DATA WILL EVER BE LOGGED OR SENT TO ME!
-        </p>
-        <a href="https://addons.mozilla.org/firefox/addon/port-authority/">
-            <img src="https://blog.mozilla.org/addons/files/2020/04/get-the-addon-fx-apr-2020.svg" alt="for Firefox" height="60px" />
-        </a>
-        <p>
-            If you download the Port Authority add-on, your browser will block all malicious port scans and scripts.
-        </p>
-        <h2 id="requestsmade" hidden>
-            Requests Made
-        </h2>
-        <div id="results" style="padding-top: 10px; font-weight: bold;"></div>
-    </main>
-
-    <div id="testdiv" hidden></div>
+        <div id="testdiv" hidden></div>
+    </section>
 
     <script>
         /* DOM nodes */
         const trigger_portscan_button = document.getElementById("custom_button");
-        const res_div = document.getElementById("results");
+        const results_container = document.getElementById("results");
         const test_div = document.getElementById("testdiv");
 
         /* The scanner needs these global variables for an ugly hack. */
@@ -82,7 +178,7 @@
                     the global directory so that it can be retrieved. */
                 test_div.innerHTML = '<img src="http://' + host + 
                     '" alt="" onerror="error_handler(' + our_scanobj_index + ');" />';
-                res_div.innerHTML += "http://" + host + "<br />";
+                results_container.innerHTML += "http://" + host + "<br />";
 
                 // XXX: What's the right way to do this in JS?
                 var thiss = this;
@@ -109,7 +205,7 @@
                 test_div.innerHTML = '<img src="https://' + host + 
                     '" alt="" onerror="error_handler(' + our_scanobj_index + ');" />';
 
-                res_div.innerHTML += "https://" + host + "<br />";
+                results_container.innerHTML += "https://" + host + "<br />";
 
                 // XXX: What's the right way to do this in JS?
                 var thiss = this;
@@ -127,7 +223,7 @@
             this.ws = function() {
             return new Promise((resolve, reject) => {
                 var ws = new WebSocket("ws://" + host + '/')
-                res_div.innerHTML += "ws://" + host + "<br />";
+                results_container.innerHTML += "ws://" + host + "<br />";
                 ws.onerror = function() {
                 // close the socket before we return
                 ws.close()
@@ -138,7 +234,7 @@
             this.wss = function() {
             return new Promise((resolve, reject) => {
                 var ws = new WebSocket("wss://" + host + '/')
-                res_div.innerHTML += "wss://" + host + "<br />";
+                results_container.innerHTML += "wss://" + host + "<br />";
                 ws.onerror = function() {
                 // close the socket before we return
                 ws.close()
@@ -168,9 +264,11 @@
             const scripts = ["fp.disney.go.com", "h.chase.co.uk", "analytics.vacations.united.com", "tmx.bestbuy.com", "thm12.visa.com", "tmetrix.my.chick-fil-a.com", "cfa.fidelity.com", "content22.citibank.com", "deviceauth.dmv.ca.gov", "dfp.t-mobile.at", "src.ebay-us.com", "fp.disney.go.com", "fp.ups.com"];
 
             trigger_portscan_button.disabled = true;
-            document.getElementById("requestsmade").hidden = false;
+            trigger_portscan_button.blur();
 
-            res_div.innerText = "";
+            document.getElementById("results-label").hidden = false;
+            results_container.hidden = false;
+            results_container.innerText = "";
 
             for(const item of ips){
                 const [ip, port] = Object.entries(item)[0];
