Tiny CSS tweaks to make the "get plugin" button hitbox match its contents instead of cover the full width

--- a/TestPortScans.html
+++ b/TestPortScans.html
@@ -92,10 +92,11 @@
             outline: 8px solid oklch(from var(--red) calc(l + 0.1) c h);
             color: var(--foreground);
         }
+        
         #plugin-button {
             display: block;
+            width: fit-content;
             margin: 0 auto;
-            text-align: center;
         }
 
         code, pre {
