Make new global styles file `/global/common.css`, adding dark theme support (Fixes #44)
- This commit (and all others in this branch) are part of a fake, simplified history to avoid polluting the main repo with hundreds of dev commits. To see an accurate git-blame history for this file check out the `mwsundberg/style-changes-minimal` branch
- In this fake history the popup styles are pretty broken atm, this is to be expected
- Dark mode support is enabled with the color-scheme meta tag and controlled by updating the CSS color variables in a media query
- The `manifest.json` change removes the [browser styles](https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Browser_styles), which might be needed to enable dark mode or might not, don't recall. Either way it's recommended to not rely on them
- The reason `core.css` was deleted instead of modified and used as the base of `global/common.css` was that all style changes were done from a blank slate to avoid needing to keep the old license/copyright on the styles. I took a screenshot of the popup and referred to that rather than reading/modifying the licensed code
- An exception to this cleanroom rewrite strategy is `switch.css`, since it's fairly atomic and can be replaced easily if needing to avoid licensed code in the future

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="color-scheme" content="light dark">
 
     <title>Port Authority</title>
 
-    <link rel="stylesheet" type="text/css" href="switchButtons.css">
-    <link rel="stylesheet" type="text/css" href="core.css">
+    <link rel="stylesheet" type="text/css" href="../global/common.css">
+    <link rel="stylesheet" type="text/css" href="./switchButtons.css">
 </head>
 
 <body>
