--- a/settings/settings.html
+++ b/settings/settings.html
@@ -2,10 +2,12 @@
 <html lang="en" class="loading">
 
 <head>
-    <!-- Required meta tag -->
     <meta charset="utf-8">
+    <meta name="color-scheme" content="light dark">
+
     <title>Port Authority</title>
-    <link rel="stylesheet" type="text/css" href="../popup/core.css">
+
+    <link rel="stylesheet" type="text/css" href="../global/common.css">
 </head>
 
 <body>
