Refactor `switchButtons.css` to be CSS variable driven and less brittle with positioning requirements
- The change to use `:after` was pretty much arbitrary, though it is one less character than `:before`
- Removed unneeded `-webkit-` prefixed `transform` properties
- Layout for the text following the switch comes from `margin-inline-end: 8px` and standard flow layout behavior instead of manual `position: absolute` hacking

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="loading">
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="color-scheme" content="light dark">
@@ -11,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./switchButtons.css">
 </head>
 
-<body>
+<body class="loading">
     <div class="container-fluid popup-container">
         <div class="row">
             <nav class="col-12 navbar-margin navbar banner-color d-flex align-items-center justify-content-center">
