--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,53 +8,40 @@
 
     <link rel="stylesheet" type="text/css" href="../global/common.css">
     <link rel="stylesheet" type="text/css" href="./switchButtons.css">
+    <link rel="stylesheet" type="text/css" href="./popup.css">
 </head>
 
 <body class="loading">
-    <div class="container-fluid popup-container">
-        <div class="row">
-            <nav class="col-12 navbar-margin navbar banner-color d-flex align-items-center justify-content-center">
-                <div class="navbar-brand d-flex">
-                    <img src="../icons/logo-32.png" width="32" height="32" alt="">
-                    <span class="brand ml-2 bold navbar-brand-text">
-                        Port Authority
-                    </span>
-                </div>
-            </nav>
-        </div>
-
-        <div class="row" id="config_section">
-            <div class="col-12">
-                <h5 class="bold-text">Options
-                <img src="../icons/settings.png" class="settings-icon" width="24" height="24" alt="" id="settings">
-                </h5>
-            </div>
-            <div class="col-sm-1">
-                <label class="switch">
-                    <input type="checkbox" id="globalStatusPortAuthority">
-                    <span class="slider round"></span>
-                    <label id="configs_switch_filter" class="bold switch-label">Blocking</label>
-                </label>
-            </div>
-        </div>
-
-        <div class="row" id="config_section">
-            <div class="col-sm-1">
-                <label class="switch">
-                    <input type="checkbox" id="notificationStatusPortAuthority">
-                    <span class="slider round"></span>
-                    <label id="configs_switch_filter" class="bold switch-label">Notifications</label>
-                </label>
-            </div>
-        </div>
-
-        <div class="row" id="blocked_data_display">
-        </div>
-        <br />
-    </div>
-    <script type="module" src="../BrowserStorageManager.js"></script>
-    <script type="module" src="switch.js"></script>
-    <script type="module" src="PopupUI.js"></script>
+    <header class="flex-row red-bg">
+        <img src="../icons/logo-32.png" width="32" height="32" alt="PortAuthority Logo">
+        <h1>
+            Port Authority
+        </h1>
+    </header>
+    <main class="flex-column">
+        <!-- Settings section -->
+        <section>
+            <!-- Link to the plugin options page, gear icon is now rendered in `#settings::after` to recolor better with CSS -->
+            <a href="#" id="settings" title="Open Add-on Options"></a>
+            <h2>Settings</h2>
+            <!-- Config switches -->
+            <label class="flex-row switch">
+                <input type="checkbox" id="globalStatusPortAuthority">
+                <span class="slider round"></span>
+                Blocking
+            </label>
+            <label class="flex-row switch">
+                <input type="checkbox" id="notificationStatusPortAuthority">
+                <span class="slider round"></span>
+                Notifications
+            </label>
+        </section>
+        <!-- Per-tab blocking data sections -->
+        <section id="blocked_data_display">
+            <!-- Dynamically Populated -->
+        </section>
+    </main>
+    <script type="module" src="./switch.js"></script>
+    <script type="module" src="./PopupUI.js"></script>
 </body>
-
 </html>
