Move the popup switch action effects directly to the listeners instead of routing it all through messages
Unsure if the message handling code needs to have an origin check, which was recently added in the name of security.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -26,12 +26,12 @@
             <h2>Settings</h2>
             <!-- Config switches -->
             <label class="flex-row switch">
-                <input type="checkbox" id="globalStatusPortAuthority">
+                <input type="checkbox" id="blocking_switch">
                 <span class="slider round"></span>
                 Blocking
             </label>
             <label class="flex-row switch">
-                <input type="checkbox" id="notificationStatusPortAuthority">
+                <input type="checkbox" id="notifications_switch">
                 <span class="slider round"></span>
                 Notifications
             </label>
