Improve settings page form handling
- Used an id for selecting the form in DOM instead of querying for a `<form>` element
- Prevented the default form submit behavior (reload the page), which cleared alerts used to give feedback on the domain being added
- Rerender after updating the allowlist storage item instead of relying on the refresh to re-call `load_allowed_domains`
- Improved URL validation to allow non-`http*` protocols when adding to the allowlist, handle leading/trailing whitespace

Fixup improve settings page form handling

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -12,9 +12,9 @@
 
 <body>
     <p class="warning-text"><strong>Make sure you enter a proper domain name (ebay.com)</strong></p>
-    <form>
+    <form id="allowlist_add_form">
         <label>Add new domain:</label>
-        <input type="text" required id="add_domain" />
+        <input type="text" required name="add_domain" />
         <button type="submit">Save</button>
     </form>
     <br />
