Refactor settings page data rendering JS
- Now passing the list to the re-render function when have it already from the storage call (saving a storage read)
- A wrapper element is hidden when there's no allowlist data
- Refactored a single domain's rendering into its own function (less necessary in this case, yet makes for a good pattern when used on the popup later)
- Made the "remove domain" buttons into little "✕"es instead of just text saying "Remove"

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -19,9 +19,9 @@
         </label>
         <button type="submit">Add</button>
     </form>
-    <section id="allowlist_section">
+    <section id="allowlist_section" hidden>
         <strong>Domains Allowed to Bypass PortAuthority Blocking:</strong>
-        <ul id="allowedDomainsListID" class="selectable">
+        <ul id="allowlist_contents" class="selectable">
             <!-- Dynamically Populated -->
         </ul>
     </section>
