Rewrite of popup data rendering JS
- Separates host and portscans blocking sections, conditionally hiding them when no blocking has occurred
- Reordered portscan blocking ahead of tracking script blocking due to higher prevalence
- Uses only CSS for collapsing/showing the ports with a `:has(input:checked)` CSS selector trick
- Vastly simplifies HTML structure due to no longer needing to match bootstrap formatting
- Currently lacks animation when expanding the ports list. This is a compromise which could be fixed with JS (excessive and annoying) or with CSS once Firefox starts supporting `interpolate-size: allow-keywords`

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -37,8 +37,17 @@
             </label>
         </section>
         <!-- Per-tab blocking data sections -->
-        <section id="blocked_data_display">
-            <!-- Dynamically Populated -->
+        <section id="blocked_ports" hidden>
+            <h2>Blocked Port Scans</h2>
+            <ul class="dropzone selectable">
+                <!-- Dynamically Populated -->
+            </ul>
+        </section>
+        <section id="blocked_hosts" hidden>
+            <h2>Blocked Tracking Scripts</h2>
+            <ul class="dropzone selectable">
+                <!-- Dynamically Populated -->
+            </ul>
         </section>
     </main>
     <script type="module" src="./switch.js"></script>
